<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.niharinfo.makeadeal.LoginActivity">


    <TextView
        android:id="@+id/txtWelcome"
        style="@style/txtTitle"
        android:text="@string/welcome"
        android:layout_margin="10dp"
        android:layout_above="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        />

    <ImageView
        android:id="@+id/imgLogo"
        style="@style/btnStyle"
        android:src="@drawable/logo"
        android:layout_above="@+id/lnrLogin"
        android:contentDescription="@string/app_name"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:id="@+id/lnrLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_centerInParent="true">



    <!--<com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="249dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="30dp"
        />-->

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_sign_in"
        android:layout_width="249dp"
        android:layout_height="45dp"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="200dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>

    <!--<Button
        android:id="@+id/btnTwitter"
        style="@style/login_button"
        android:background="@drawable/twitter_button"
        android:drawableLeft="@mipmap/bird"
        android:text="@string/twitter_login"
        android:layout_below="@id/btn_sign_in"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>-->

    <Button
        android:id="@+id/btnMakeADealLogin"
        style="@style/login_button"
        android:background="@drawable/makeadeal_login_button"
        android:drawableLeft="@mipmap/email"
        android:text="@string/make_deal_login"
        android:layout_below="@id/btn_sign_in"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:weightSum="2"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtMember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_member"
            android:textSize="18sp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_now"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/twitter_blue"
            android:gravity="center"
            />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbLogin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:indeterminateDrawable="@drawable/custom_progress" />



</RelativeLayout>
